fix: z-index

--- a/web/src/styles/main.css
+++ b/web/src/styles/main.css
@@ -6,5 +6,6 @@
   .swiper {
     width: 100%;
     height: 100%;
+    z-index: -10;
   }
 }
